# agent-mesh

./: .env.example  .gitignore  .mcp.json  01_validate_raw_data.py  02_create_curated_data.py  03_create_semantic_layer.py  03_load_curated_to_mysql.py  CODEBASE_EXPLANATION.md  EXECUTION.md  README.md  SYSTEM_FLOW.md  a2a_server.py  api_server.py  architecture.md  devui_app.py  flush_metrics.py  index.html  launch_mesh.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  test_agent_mesh.py  test_project.py  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
agent-mesh/: .env.example  .gitignore  CODEBASE_EXPLANATION.md  README.md  SYSTEM_FLOW.md  a2a_server.py  api_server.py  devui_app.py  run.py  test_queries.md
config/: default.yaml  local.yaml  production.yaml
data/: grafana_dashboard.json  grafana_dashboard_extended.json  job_postings.json  policies.json  trace_log.jsonl
datalayer-as-service/: 01_validate_raw_data.py  02_create_curated_data.py  03_create_semantic_layer.py  03_load_curated_to_mysql.py  04_create_semantic_views.py  README.md  agent.py  app.py  requirements.txt  requirements_backup.txt  test_mysql_connection.py  test_queries.md
docker_files/: Dockerfile  Dockerfile.embedding  docker-compose.yml
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mcp_integration/: INTEGRATION.md
mcp_server/: db.py  server.py  tools.py
my_KB/: SYSTEM_FLOW.md  agentmesh_dataflow.pptx  agentmesh_memory_guide.pptx  agentmesh_observability.pptx  architecture.md  conversationstate_implementation.md  (+3 more)
(+324 files in other folders)
