[project]
name = "gernas-rag"
version = "1.0.0"
description = "GERNAS RAG Layer — production-grade hybrid retrieval service"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Embeddings
    "FlagEmbedding>=1.2.9",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    # Vector DBs
    "qdrant-client>=1.10.0",
    "pymilvus>=2.4.0",
    "chromadb>=0.5.0",
    # Document extraction
    "docling>=2.0.0",
    "unstructured[pdf,docx]>=0.14.0",
    "pymupdf>=1.24.0",
    # Chunking
    "langchain-text-splitters>=0.2.0",
    # LLM providers
    "groq>=0.9.0",
    "anthropic>=0.30.0",
    "langchain-groq>=0.1.9",
    "langchain-anthropic>=0.1.22",
    "langchain-huggingface>=0.0.3",
    "openai>=1.35.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Evaluation
    "ragas>=0.1.14",
    "datasets>=2.20.0",
    # Observability
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "structlog>=24.2.0",
    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "langchain-community>=0.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gernas_rag"]
